--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import '~react-big-calendar/lib/css/react-big-calendar.css';
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
